2004-02-27  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-form.el (w3m-form-mee-new): Use `w3m-form-normalize-action'
	for action.

2004-02-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-select-buffer-show-this-line): Call
	`w3m-e21-wobble-window-size' when Emacs 21 or 22 is running.

	* w3m-e21.el (w3m-tab-line-format): Make it buffer-local variable.
	(w3m-tab-timer): Ditto.
	(w3m-e21-wobble-window-size): New function.
	(w3m-tab-line): Make `w3m-tab-timer' hold boolean value; let a
	timer function run certainly in a buffer in which a timer started;
	use `w3m-e21-wobble-window-size'.
	(w3m-e21-switch-to-buffer): New command.
	(w3m-e21-subst-switch-to-buffer-keys): New function.
	(w3m-mode-setup-functions): Add
	`w3m-e21-subst-switch-to-buffer-keys'.
	(w3m-select-buffer-hook): Add `w3m-e21-wobble-window-size'.
	(w3m-spinner-image-index): Make it buffer-local variable.

2004-02-25  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-form.el (w3m-form-make-form-data): Align form by the number
	of `hseq'.

2004-02-24  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/shimbun.el (shimbun-retrieve-url): Added argument `referer'.
	(shimbun-mime-replace-image-tags): Call `shimbun-retrieve-url' with
	argument `referer'.

2004-02-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-antenna.el (w3m-antenna-sites): Add
	`w3m-antenna-check-another-page' to its customize spec.
	(w3m-antenna-check-another-page): New function.
	(w3m-about-antenna): Relaxed the condition to check changed sites.
	(w3m-antenna-add): Add a new site at the end of
	`w3m-antenna-sites' instead of adding it at the top.

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Relaxed the
	regular expression that matches spaces.

	* shimbun/sb-rss.el (shimbun-get-headers): Check channel's author.

	* shimbun/sb-slashdot-jp.el: Chenges to support sectioned RSS
	feeds and diaries.
	(shimbun-slashdot-jp-group-alist): New option.
	(shimbun-slashdot-jp-url): Abolished.